--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -13,20 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs4.min.css">
         <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css">
-        <style>
-            .my-footer {
-                height: 5em;
-                background-color: #163b65;
-                margin-top: 1.5em;
-                padding: 1em;
-                color: white;
-                font-size: 80%;
-            }
-
-            .datepicker {
-                z-index: 10000;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
     </head>
     <body>
 
